# archestra

./: EXTERNAL_CONTRIBUTORS.md  README.md
.claude/commands/: review-pr.md
.github/: kind.yaml  values-ci.yaml  values-staging.yaml
.github/release-please/: .release-please-manifest.json
.github/workflows/: auto-assign-reviewers.yml  build-base-mcp-server-docker-image.yml  on-commits-to-main.yml  on-pull-requests.yml  platform-e2e-tests.yml  platform-linting-and-tests.yml  publish-platform-helm-chart.yml  release-please.yml
ai-labs/baton/: README.md  baton-authority-model-design.md  baton-declassifier-design.md
ai-labs/baton/agentdojo-harness/: .gitignore  README.md  pyproject.toml
ai-labs/baton/agentdojo-harness/contracts/: workspace.toml
ai-labs/baton/agentdojo-harness/src/baton_dojo/: _agentdojo_compat.py  bench.py  bridge.py  cli.py  contracts.py  defense.py  pipeline.py
ai-labs/baton/agentdojo-harness/tests/: test_agentdojo_compat.py  test_bench.py  test_bridge.py  test_defense.py  test_pipeline.py
archestra-bench/: README.md
docs/: openapi.json
docs/pages/: contributing.md  mcp-authentication.md  platform-access-control.md  platform-adding-llm-providers.md  platform-agent-skills-sharing.md  platform-agent-skills.md  platform-agent-triggers-schedule.md  platform-agent-triggers-webhook-a2a.md  platform-agents.md  platform-apps.md  platform-archestra-mcp-server.md  platform-chat.md  platform-claude-code-example.md  platform-connection.md  (+17 more)
platform/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  Tiltfile  package.json  pnpm-lock.yaml  turbo.json
(+885 files in other folders)
