[project]
name = "baton-dojo"
version = "0.1.0"
description = "AgentDojo harness for the baton-core IFC policy engine prototype"
requires-python = ">=3.11"
dependencies = [
    # Pinned: the defense derives executed calls from this version's exact
    # tool-error message shapes (see defense.py); bump = re-verify those.
    "agentdojo==0.1.35",
    "openai>=1",
]

[project.scripts]
baton-dojo = "baton_dojo.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baton_dojo"]
